<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/flatColor"
    android:paddingTop="@dimen/activity_horizontal_margin_login"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".InscriptionFormulaireActivity">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/altimg"
            android:src="@drawable/epsi"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin_input"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_input"
            android:paddingTop="@dimen/activity_horizontal_margin_login">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin_input"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_input"
            >

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:background="@color/flatColor"
            android:gravity="bottom"
            android:layout_marginTop="@dimen/activity_vertical_margin_button">



            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign"
                    android:layout_alignParentRight="true"
                    android:textColor="@android:color/holo_green_light"
                    android:backgroundTintMode="screen"
                    android:backgroundTint="@android:color/transparent"
                    />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_up"
                    android:textColor="@android:color/holo_blue_dark"
                    android:backgroundTintMode="screen"
                    android:backgroundTint="@android:color/transparent"
                    />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
